--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,9 @@ header {
   padding: 20px;
   border-bottom: 2px solid purple;
 }
-
+audio{
+  width: 500px;
+}
 .resultsArea {
   display: flex;
   flex-wrap: wrap;
