--- a/styles.css
+++ b/styles.css
@@ -9,23 +9,28 @@ header {
 
 .player {
   display: flex;
-  justify-content: space-around;
-  align-content: space-around;
-  top: 0px;
+  justify-content: flex-end;
+  right: 15px;
+  top: 15px;
   position: sticky;
 }
 
-.search{
+.search {
   border-top: 2px solid purple;
 }
-#music-player{
 
+#music-player {
+  width: 300px;
+  display: none;
 }
-#video-player{
+
+#video-player {
   height: 200px;
   width: 300px;
   background-color: black;
+  display: none;
 }
+
 .resultsArea {
   display: flex;
   flex-wrap: wrap;
@@ -41,7 +46,8 @@ header {
   flex-direction: column;
   align-items: center;
 }
-img{
+
+img {
   height: 102px;
   width: 102px;
 }
